brat/test/golden/error/fanin-not-enough-overs.brat.golden
Error in test/golden/error/fanin-not-enough-overs.brat@2:5
f = { [\/] }
    ^^^^^^^^

  Type error: Not enough inputs to make a vector of size 3

